# nuTens

./: .pre-commit-config.yaml  CMakeLists.txt  PyTorch_requirements.txt  README.md  _formulas.tex  annotated.html  base-matter-solver_8hpp.html  base-matter-solver_8hpp_source.html  citelist.html  classBaseMatterSolver-members.html  classBaseMatterSolver.html  classConstDensityMatterSolver-members.html  classConstDensityMatterSolver.html  classInstrumentationTimer-members.html  classInstrumentationTimer.html  classProfileWriter-members.html  classProfileWriter.html  classPropagator-members.html  classPropagator.html  classTensor-members.html  classTensor.html  classVacuumPropagator-members.html  classVacuumPropagator.html  classes.html  const-density-solver_8hpp.html  const-density-solver_8hpp_source.html  constants_8hpp.html  constants_8hpp_source.html  dir_1edec6ff960eb28042e3c1b3c3419deb.html  dir_35472892c3a906db7e1d7efa8ff630b4.html  dir_a45f556674a8579c7e0c0fbaaf772ef2.html  dir_a47f038a6d27165ff3faab46d16a9b3e.html  dtypes_8hpp.html  dtypes_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  (+27 more)
.github/workflows/: CI-build-and-test.yml  benchmarking-track-main.yaml  benchmarking.yaml  cmake-single-platform.yml  cpp-linter.yaml  doxygen-deployment.yml  pip.yaml  pypi-distribution-reusable.yaml  pypi-distribution.yaml
benchmarks/: CMakeLists.txt  benchmarks.cpp
doc/: doxygen.config  logo-generator.py
nuTens/: CMakeLists.txt  instrumentation.hpp  logging.hpp  nuTens-pch.hpp
nuTens/propagator/: CMakeLists.txt  base-matter-solver.hpp  const-density-solver.cpp  const-density-solver.hpp  constants.hpp  propagator.cpp  propagator.hpp  vacuum-propagator.cpp  vacuum-propagator.hpp
nuTens/tensors/: CMakeLists.txt  dtypes.hpp  tensor.hpp  torch-tensor.cpp
nuTens/utils/: CMakeLists.txt
python/: CMakeLists.txt  binding.cpp  pyNuTens-test.py  pyNuTens.cpp
python/pyNuTens/: __init__.py  propagator.py  tensor.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  (+22 more)
tests/: CMakeLists.txt  barger-propagator.hpp  barger-test.cpp  barger.cpp  basic.cpp  tensor-basic.cpp  test-utils.hpp  two-flavour-const-matter.cpp  two-flavour-osc.cpp  two-flavour-vacuum.cpp
