[build-system]
requires = ["scikit-build-core", "pybind11", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "nuTens"
version = "0.0.1"
description="Library to calculate neutrino oscillation probabilities using tensors"
readme = "README.md"
authors = [
  { name = "Ewan Miller", email = "emiller@ifae.es" },
]

[tool.scikit-build]
cmake.args = ["-DNT_ENABLE_PYTHON=ON -DUSE_CUDA=OFF"]
